// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPane hides the captcha for SSO connections 1`] = `
<div>
  <UsernamePane
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
    strictValidation={false}
    usernameStyle="username"
    validateFormat={false}
  />
  <PasswordPane
    hidden={false}
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
  />
</div>
`;

exports[`LoginPane renders a captcha 1`] = `
<div>
  <UsernamePane
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
    strictValidation={false}
    usernameStyle="username"
    validateFormat={false}
  />
  <PasswordPane
    hidden={false}
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
  />
  <CaptchaPane
    error={false}
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    onReload={[Function]}
  />
</div>
`;

exports[`LoginPane renders correctly 1`] = `
<div>
  <UsernamePane
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
    strictValidation={false}
    usernameStyle="username"
    validateFormat={false}
  />
  <PasswordPane
    hidden={false}
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
  />
</div>
`;

exports[`LoginPane shows the captcha for SSO (ADFS) connections 1`] = `
<div>
  <UsernamePane
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
    strictValidation={false}
    usernameStyle="username"
    validateFormat={false}
  />
  <PasswordPane
    hidden={false}
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder=""
  />
  <CaptchaPane
    error={false}
    i18n={Object {}}
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    onReload={[Function]}
  />
</div>
`;
